@@ -1,3 +1,7 @@
+= HEAD
+
+* Add :check_paths, :allowed_paths, and :add_allowed_paths render plugin options to avoid security issues with template rendering (jeremyevans)
+
 = 2.12.0 (2016-03-15)
 
 * Allow error handler access to the request's remaining_path (jeremyevans)
